monkey testing and some stats added

--- a/testing_inst_ind_comb_numba.ipynb
+++ b/testing_inst_ind_comb_numba.ipynb
@@ -903,6 +903,23 @@
     "    return max_dd\n",
     "\n",
     "@njit(cache=True)\n",
+    "def get_drawdown_duration(pnl_arr):\n",
+    "    peak = pnl_arr[0]\n",
+    "    max_duration = 0\n",
+    "    current_duration = 0\n",
+    "\n",
+    "    for pnl in pnl_arr:\n",
+    "        if pnl < peak:  # We are in a drawdown\n",
+    "            current_duration += 1\n",
+    "        else:  # We found a new peak\n",
+    "            peak = pnl\n",
+    "            current_duration = 0\n",
+    "\n",
+    "        max_duration = max(max_duration, current_duration)\n",
+    "\n",
+    "    return max_duration\n",
+    "\n",
+    "@njit(cache=True)\n",
     "def get_sharpe_ratio(\n",
     "    pnl_list, \n",
     "    risk_free_rate=0\n",
@@ -931,7 +948,24 @@
     "        std_dev += 0.0001\n",
     "\n",
     "    sharpe_ratio = (mean_return - risk_free_rate) / std_dev\n",
-    "    return sharpe_ratio\n"
+    "    return sharpe_ratio\n",
+    "\n",
+    "@njit(cache=True)\n",
+    "def get_sortino_ratio(profit_loss, target_pl=0):\n",
+    "\n",
+    "    downside_pnl = profit_loss[profit_loss < target_pl]\n",
+    "    if len(downside_pnl) == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    downside_deviation = np.sqrt(np.mean((downside_pnl - target_pl) ** 2))\n",
+    "    if downside_deviation == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    mean_pnl = np.mean(profit_loss)\n",
+    "    sortino_ratio = (mean_pnl - target_pl) / downside_deviation\n",
+    "\n",
+    "    return sortino_ratio\n",
+    "\n"
    ]
   },
   {
@@ -940,7 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_mean_performance(data, text_code):\n",
+    "def calculate_mean_performance(data, text_code, monkey_test=False):\n",
     "\n",
     "    bars_per_5week = 7 * 60 * 24 * 5\n",
     "    n_bars_per_year = 7 * 60 * 24 * 52\n",
@@ -980,13 +1014,28 @@
     "            signal_idxs = sorted(signal_idxs)\n",
     "\n",
     "            performance_walk_forward_dict['n_trades'].append(len(signal_idxs) - 1)\n",
-    "            performance_walk_forward_dict['pnl'].append(np.sum(pnl_list))\n",
-    "            performance_walk_forward_dict['roi'].append(100 * np.sum(pnl_list) / (trade_size * init_inv))\n",
+    "            overall_pnl = np.sum(pnl_list)\n",
+    "            performance_walk_forward_dict['pnl'].append(overall_pnl)\n",
+    "            performance_walk_forward_dict['roi'].append(100 * overall_pnl / (trade_size * init_inv))\n",
     "            performance_walk_forward_dict['avg_drawdown'].append(exec_dict['avg_drawdown'])\n",
-    "            performance_walk_forward_dict['drawdown'].append(get_drawdown(pnl_list))\n",
+    "            max_dd = get_drawdown(pnl_list)\n",
+    "            performance_walk_forward_dict['drawdown'].append(max_dd)\n",
+    "            performance_walk_forward_dict['drawdown_dur'].append(get_drawdown_duration(pnl_list))\n",
     "            performance_walk_forward_dict['pnl_avgd_ratio'].append(exec_dict['fitness'])\n",
     "            annualized_sharpe_ration = np.sqrt(525600) * get_sharpe_ratio(pnl_list, risk_free_rate=0)\n",
     "            performance_walk_forward_dict['sharpe_ratio'].append(annualized_sharpe_ration)\n",
+    "            annualized_sortino_ratio = np.sqrt(525600) * get_sortino_ratio(pnl_list)\n",
+    "            performance_walk_forward_dict['sortino_ratio'].append(annualized_sortino_ratio)\n",
+    "\n",
+    "            if monkey_test:\n",
+    "                pnl_mren_arr = exec_dict['pnl_mren_arr']\n",
+    "                max_dd_mren_arr = exec_dict['max_dd_mren_arr']\n",
+    "\n",
+    "                pnl_mren_good_cases = np.sum(np.where(overall_pnl > pnl_mren_arr, 1, 0))\n",
+    "                max_dd_mren_good_cases = np.sum(np.where(max_dd < max_dd_mren_arr, 1, 0))\n",
+    "                performance_walk_forward_dict['mt_pnl'].append(100 * pnl_mren_good_cases / len(pnl_mren_arr))\n",
+    "                performance_walk_forward_dict['mt_mdd'].append(100 * max_dd_mren_good_cases / len(max_dd_mren_arr))\n",
+    "\n",
     "        except:\n",
     "            n_not_worked += 1\n",
     "\n",
@@ -1001,12 +1050,30 @@
     "        append(np.mean(performance_walk_forward_dict['avg_drawdown']))\n",
     "    mean_perf_dict['Drawdown (%)'].\\\n",
     "        append(np.mean(performance_walk_forward_dict['drawdown']))\n",
+    "    mean_perf_dict['Drawdown_Duration'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['drawdown_dur']))\n",
     "    mean_perf_dict['PNL_AVGD_Ratio'].\\\n",
     "        append(np.mean(performance_walk_forward_dict['pnl_avgd_ratio']))\n",
     "    mean_perf_dict['Sharpe_Ratio'].\\\n",
     "        append(np.mean(performance_walk_forward_dict['sharpe_ratio']))\n",
+    "    mean_perf_dict['Sortino_Ratio'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['sortino_ratio']))\n",
     "    mean_perf_dict['Not_Working'].\\\n",
     "        append(100 * n_not_worked / n_total_cases)\n",
+    "    \n",
+    "    if monkey_test:\n",
+    "        mean_perf_dict['MT_PNL_D'].\\\n",
+    "            append(np.mean(performance_walk_forward_dict['mt_pnl']))\n",
+    "        mean_perf_dict['MT_MDD_D'].\\\n",
+    "            append(np.mean(performance_walk_forward_dict['mt_mdd']))\n",
+    "        mean_perf_dict['MT_PNL_D_Min'].\\\n",
+    "            append(np.min(performance_walk_forward_dict['mt_pnl']))\n",
+    "        mean_perf_dict['MT_MDD_D_Min'].\\\n",
+    "            append(np.min(performance_walk_forward_dict['mt_mdd']))\n",
+    "        mean_perf_dict['MT_PNL_D_Max'].\\\n",
+    "            append(np.max(performance_walk_forward_dict['mt_pnl']))\n",
+    "        mean_perf_dict['MT_MDD_D_Max'].\\\n",
+    "            append(np.max(performance_walk_forward_dict['mt_mdd']))\n",
     "    \n",
     "    perf_df = pd.DataFrame(mean_perf_dict)\n",
     "\n",
@@ -1017,7 +1084,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Equity curve Monte Carlo simulation"
+    "## Equity curve Monte Carlo simulation"
    ]
   },
   {
@@ -1029,6 +1096,7 @@
     "def get_mc_results(pnl_list, init_inv, trade_size, n_runs):\n",
     "\n",
     "    max_dd_list = []\n",
+    "    dd_dur_list = []\n",
     "    profit_list = []\n",
     "    roi_list = []\n",
     "    binary_profit_list = []\n",
@@ -1040,6 +1108,9 @@
     "        max_dd = get_drawdown(temp_pnl_list)\n",
     "        max_dd_list.append(max_dd)\n",
     "\n",
+    "        dd_dur = get_drawdown_duration(temp_pnl_list)\n",
+    "        dd_dur_list.append(dd_dur)\n",
+    "\n",
     "        profit_list.append(np.sum(temp_pnl_list))\n",
     "        roi_list.append(100 * np.sum(temp_pnl_list) / (init_inv * trade_size))\n",
     "        is_profit = 1 if np.sum(temp_pnl_list) > 0 else 0\n",
@@ -1047,6 +1118,7 @@
     "\n",
     "    mc_dict = {}\n",
     "    mc_dict['median_max_dd'] = np.median(max_dd_list)\n",
+    "    mc_dict['median_dd_dur'] = np.median(dd_dur_list)\n",
     "    mc_dict['median_profit'] = np.median(profit_list)\n",
     "    mc_dict['median_return'] = np.median(roi_list)\n",
     "    mc_dict['return_dd_ratio'] = np.median(roi_list) / np.median(max_dd_list)\n",
@@ -1099,6 +1171,7 @@
     "            mc_dict = get_mc_results(pnl_list, init_inv, trade_size, n_runs=10000)\n",
     "\n",
     "            performance_walk_forward_dict['median_max_dd'].append(mc_dict['median_max_dd'])\n",
+    "            performance_walk_forward_dict['median_dd_dur'].append(mc_dict['median_dd_dur'])\n",
     "            performance_walk_forward_dict['median_profit'].append(mc_dict['median_profit'])\n",
     "            performance_walk_forward_dict['median_return'].append(mc_dict['median_return'])\n",
     "            performance_walk_forward_dict['return_dd_ratio'].append(mc_dict['return_dd_ratio'])\n",
@@ -1109,6 +1182,8 @@
     "    mean_perf_dict = defaultdict(list)\n",
     "    mean_perf_dict['median_drawdown (%)'].\\\n",
     "        append(np.mean(performance_walk_forward_dict['median_max_dd']))\n",
+    "    mean_perf_dict['median_drawdown_duration'].\\\n",
+    "        append(np.mean(performance_walk_forward_dict['median_dd_dur']))\n",
     "    mean_perf_dict['median_profit'].\\\n",
     "        append(np.mean(performance_walk_forward_dict['median_profit']))\n",
     "    mean_perf_dict['median_ROI (%)'].\\\n",
@@ -1576,7 +1651,7 @@
     "import numpy as np\n",
     "import gc\n",
     "from fitness.indicators import numba_indicators\n",
-    "from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals, get_lag\n",
+    "from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals, get_lag, get_monkey_test_results\n",
     "os.chdir(CUR_DIR)\n",
     "#from numba import njit\n",
     "COMMISSION = 0.015\n",
@@ -1591,6 +1666,7 @@
     "    buy_idxs = np.array(buy_idxs)\n",
     "    sell_idxs = np.array(sell_idxs)\n",
     "    open_prices = price_data['btc_open']\n",
+    "    pnl_mren_arr, max_dd_mren_arr = get_monkey_test_results(open_prices, buy_idxs, sell_idxs, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE)\n",
     "    buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
     "    sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
     "    if buy_idxs[0] < sell_idxs[0]:\n",
@@ -1641,7 +1717,8 @@
     "\n",
     "    perf_df = calculate_mean_performance(\n",
     "        data=df_52w, \n",
-    "        text_code=txt_code\n",
+    "        text_code=txt_code,\n",
+    "        monkey_test=True\n",
     "    )\n",
     "\n",
     "    perf_df = pd.concat([temp_signal_df, perf_df], axis=1)\n",
