--- a/run.ipynb
+++ b/run.ipynb
@@ -211,211 +211,45 @@
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_inst_ind_comb_numba.pybnf --population_size 500 --generations 100"
+    "! python ponyge.py --fitness_function max_fitness_numba --grammar_file btc_inst_ind_comb_numba.pybnf --population_size 10 --generations 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Start:\t 2024-10-17 20:56:08.321434 \n",
-      "\n",
-      "Warning: Grammar contains unit production for production rule <fc>\n",
-      "         Unit productions consume GE codons.\n",
-      "Warning: Grammar contains unit production for production rule <deff>\n",
-      "         Unit productions consume GE codons.\n",
-      "Warning: Grammar contains unit production for production rule <callf>\n",
-      "         Unit productions consume GE codons.\n",
-      "Evolution: 0% complete\n",
-      "Evolution: 0% complete\n",
-      "Evolution: 1% complete\n",
-      "Evolution: 2% complete\n",
-      "Evolution: 3% complete\n",
-      "Evolution: 4% complete\n",
-      "Evolution: 5% complete\n",
-      "Evolution: 6% complete\n",
-      "Evolution: 7% complete\n",
-      "Evolution: 8% complete\n",
-      "Evolution: 9% complete\n",
-      "Evolution: 10% complete\n",
-      "Evolution: 11% complete\n",
-      "Evolution: 12% complete\n",
-      "Evolution: 13% complete\n",
-      "Evolution: 14% complete\n",
-      "Evolution: 15% complete\n",
-      "Evolution: 16% complete\n",
-      "Evolution: 17% complete\n",
-      "Evolution: 18% complete\n",
-      "Evolution: 19% complete\n",
-      "Evolution: 20% complete\n",
-      "Evolution: 21% complete\n",
-      "Evolution: 22% complete\n",
-      "Evolution: 23% complete\n",
-      "Evolution: 24% complete\n",
-      "Evolution: 25% complete\n",
-      "Evolution: 26% complete\n",
-      "Evolution: 27% complete\n",
-      "Evolution: 28% complete\n",
-      "Evolution: 29% complete\n",
-      "Evolution: 30% complete\n",
-      "Evolution: 31% complete\n",
-      "Evolution: 32% complete\n",
-      "Evolution: 33% complete\n",
-      "Evolution: 34% complete\n",
-      "Evolution: 35% complete\n",
-      "Evolution: 36% complete\n",
-      "Evolution: 37% complete\n",
-      "Evolution: 38% complete\n",
-      "Evolution: 39% complete\n",
-      "Evolution: 40% complete\n",
-      "Evolution: 41% complete\n",
-      "Evolution: 42% complete\n",
-      "Evolution: 43% complete\n",
-      "Evolution: 44% complete\n",
-      "Evolution: 45% complete\n",
-      "Evolution: 46% complete\n",
-      "Evolution: 47% complete\n",
-      "Evolution: 48% complete\n",
-      "Evolution: 49% complete\n",
-      "Evolution: 50% complete\n",
-      "Evolution: 51% complete\n",
-      "Evolution: 52% complete\n",
-      "Evolution: 53% complete\n",
-      "Evolution: 54% complete\n",
-      "Evolution: 55% complete\n",
-      "Evolution: 56% complete\n",
-      "Evolution: 57% complete\n",
-      "Evolution: 58% complete\n",
-      "Evolution: 59% complete\n",
-      "Evolution: 60% complete\n",
-      "Evolution: 61% complete\n",
-      "Evolution: 62% complete\n",
-      "Evolution: 63% complete\n",
-      "Evolution: 64% complete\n",
-      "Evolution: 65% complete\n",
-      "Evolution: 66% complete\n",
-      "Evolution: 67% complete\n",
-      "Evolution: 68% complete\n",
-      "Evolution: 69% complete\n",
-      "Evolution: 70% complete\n",
-      "Evolution: 71% complete\n",
-      "Evolution: 72% complete\n",
-      "Evolution: 73% complete\n",
-      "Evolution: 74% complete\n",
-      "Evolution: 75% complete\n",
-      "Evolution: 76% complete\n",
-      "Evolution: 77% complete\n",
-      "Evolution: 78% complete\n",
-      "Evolution: 79% complete\n",
-      "Evolution: 80% complete\n",
-      "Evolution: 81% complete\n",
-      "Evolution: 82% complete\n",
-      "Evolution: 83% complete\n",
-      "Evolution: 84% complete\n",
-      "Evolution: 85% complete\n",
-      "Evolution: 86% complete\n",
-      "Evolution: 87% complete\n",
-      "Evolution: 88% complete\n",
-      "Evolution: 89% complete\n",
-      "Evolution: 90% complete\n",
-      "Evolution: 91% complete\n",
-      "Evolution: 92% complete\n",
-      "Evolution: 93% complete\n",
-      "Evolution: 94% complete\n",
-      "Evolution: 95% complete\n",
-      "Evolution: 96% complete\n",
-      "Evolution: 97% complete\n",
-      "Evolution: 98% complete\n",
-      "Evolution: 99% complete\n",
-      "Evolution: 99% complete\n",
-      "\n",
-      "\n",
-      "Best:\n",
-      "  Fitness:\t -4128.236282710435\n",
-      "  Phenotype: def fun(price_data):\n",
-      "  import pandas as pd\n",
-      "  import numpy as np\n",
-      "  from fitness.indicators import numba_indicators\n",
-      "  from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals, get_lag\n",
-      "  from numba import njit\n",
-      "  COMMISSION = 0.015\n",
-      "  SLIPPAGE = 0.00005\n",
-      "  AVAILABLE_CAPITAL = 700000\n",
-      "  TRADE_SIZE = 0.5\n",
-      "  MAX_LAG = 5\n",
-      "  buy_idxs, sell_idxs = trading_signals(buy_signal=get_lag(price_data['sui_volume'], lag=4)[MAX_LAG:] >= price_data['coin_low'][MAX_LAG:], sell_signal=(get_lag(price_data['btc_volume'], lag=3)[MAX_LAG:] * get_lag(price_data['lin_close'], lag=5)[MAX_LAG:]) > 6415)\n",
-      "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
-      "    return 999\n",
-      "  buy_idxs = np.array(buy_idxs)\n",
-      "  sell_idxs = np.array(sell_idxs)\n",
-      "  open_prices = price_data['btc_open']\n",
-      "  buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
-      "  sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
-      "  if buy_idxs[0] < sell_idxs[0]:\n",
-      "    buy_arr = get_pnl(sell_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
-      "    buy_pnl = np.sum(buy_arr)\n",
-      "    sell_arr = get_pnl(buy_prices[1:], sell_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
-      "    sell_pnl = np.sum(sell_arr)\n",
-      "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
-      "  else:\n",
-      "    sell_arr = get_pnl(buy_prices, sell_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
-      "    sell_pnl = np.sum(sell_arr)\n",
-      "    buy_arr = get_pnl(sell_prices[1:], buy_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
-      "    buy_pnl = np.sum(buy_arr)\n",
-      "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
-      "  total_pnl = buy_pnl + sell_pnl\n",
-      "  if total_pnl <= 0:\n",
-      "    return 999\n",
-      "  equity_curve_arr = np.cumsum(all_arr)\n",
-      "  drawdowns = get_drawdowns(equity_curve_arr)\n",
-      "  if len(drawdowns[drawdowns!=0]) == 0:\n",
-      "    return 999\n",
-      "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
-      "  fitness = total_pnl / avg_drawdown\n",
-      "  if np.isnan(fitness):\n",
-      "    return 999\n",
-      "  return -fitness\n",
-      "fitness = fun(price_data)\n",
-      "  Genome: [95332, 97488, 62543, 53779, 98222, 7410, 26137, 16022, 42420, 49186, 59670, 37382, 2444, 36231, 33290, 44428, 4111, 32315, 52514, 63141, 82285, 71108, 86299, 27846, 91732, 19673, 7203, 97588, 69302, 67735, 63799, 53942, 77038, 29140, 52514, 82024, 63169, 19729, 41585, 83192, 59009, 76768, 74805, 22736, 50648, 71719, 66999, 13417, 16463, 46991, 5623, 53414, 31399, 34702, 34101, 85843, 25404, 65159, 4577, 55520, 26683, 14885, 59333, 42710, 81, 80868, 32315, 16445, 48118, 61603, 76872, 14509, 96838, 93483, 66713, 42420, 54996, 22138, 80085, 32315, 20277, 71131, 16753, 23268, 89752, 76143, 52843, 14194, 93571, 15349, 91131, 97231, 35371, 37515, 56907, 37772, 24545, 17516, 5234, 89416, 58048, 91143, 36107, 96386, 75856, 11660, 57620, 89036, 80525, 81696, 66097, 5334, 75511, 28587, 35732, 49898, 10883, 14725, 55611, 15896, 95054, 83372, 25413, 74819, 36931, 81714, 22317, 11453, 40227, 90653, 2377, 89546, 20545, 8606, 10525, 79591, 21953, 1204, 65439, 36483, 72815, 83102, 95998, 18038, 59838, 76320, 25500, 32761, 63067, 74887, 36284, 24777, 16440, 2112, 69657, 16531, 48539, 9131, 33973, 90529]\n",
-      "______\n",
-      "\n",
-      "  ave_fitness : \t 442.2411388721032\n",
-      "  ave_genome_length : \t 270.31\n",
-      "  ave_tree_depth : \t 9.036\n",
-      "  ave_tree_nodes : \t 69.972\n",
-      "  ave_used_codons : \t 45.894\n",
-      "  best_fitness : \t -4128.236282710435\n",
-      "  gen : \t 100\n",
-      "  invalids : \t 720\n",
-      "  max_genome_length : \t 610\n",
-      "  max_tree_depth : \t 14\n",
-      "  max_tree_nodes : \t 245\n",
-      "  max_used_codons : \t 164\n",
-      "  min_genome_length : \t 67\n",
-      "  min_tree_depth : \t 7\n",
-      "  min_tree_nodes : \t 25\n",
-      "  min_used_codons : \t 18\n",
-      "  regens : \t 12390\n",
-      "  runtime_error : \t 0\n",
-      "  time_adjust : \t 0\n",
-      "  time_taken : \t 44.57732033729553\n",
-      "  total_inds : \t 50500\n",
-      "  total_time : \t 7599.683559417725\n",
-      "  unique_inds : \t 49355\n",
-      "  unused_search : \t 2.2673267326732685\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness_numba_cache --grammar_file btc_inst_ind_comb_numba.pybnf --population_size 500 --generations 100 --cache --mutate_duplicates --multicore --save_all"
+    "# # Set crossover probability.\n",
+    "# 'CROSSOVER_PROBABILITY': 0.75,\n",
+    "# # Prevents crossover from generating invalids.\n",
+    "# 'NO_CROSSOVER_INVALIDS': False,\n",
+    "\n",
+    "# # Set mutation probability (None defaults to 1 over the length of\n",
+    "# # the genome for each codon)\n",
+    "# 'MUTATION_PROBABILITY': None,\n",
+    "# # Set number of mutation events\n",
+    "# 'MUTATION_EVENTS': 1,\n",
+    "# # Prevents mutation from generating invalids.\n",
+    "# 'NO_MUTATION_INVALIDS': False,\n",
+    "\n",
+    "# # Set elite size.\n",
+    "# 'ELITE_SIZE': None,\n",
+    "\n",
+    "# # Agent Size. Number of agents having their own copy of genetic material\n",
+    "# 'AGENT_SIZE': 100,\n",
+    "# # Interaction Probability: how frequently the agents can interaction with\n",
+    "# # each other\n",
+    "# 'INTERACTION_PROBABILITY': 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python ponyge.py --fitness_function fitness_calc --grammar_file btc_v2024_10_21.pybnf --population_size 10 --generations 1 --cache --mutate_duplicates --multicore --save_all"
    ]
   },
   {
