not important changes

--- a/run.ipynb
+++ b/run.ipynb
@@ -245,11 +245,228 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Start:\t 2024-10-30 18:04:00.225305 \n",
+      "\n",
+      "Warning: Grammar contains unit production for production rule <fc>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <deff>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <callf>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <window-const>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <window-filter>\n",
+      "         Unit productions consume GE codons.\n",
+      "Evolution: 0% complete\n",
+      "Evolution: 0% complete\n",
+      "Evolution: 1% complete\n",
+      "Evolution: 2% complete\n",
+      "Evolution: 3% complete\n",
+      "Evolution: 4% complete\n",
+      "Evolution: 5% complete\n",
+      "Evolution: 6% complete\n",
+      "Evolution: 7% complete\n",
+      "Evolution: 8% complete\n",
+      "Evolution: 9% complete\n",
+      "Evolution: 10% complete\n",
+      "Evolution: 11% complete\n",
+      "Evolution: 12% complete\n",
+      "Evolution: 13% complete\n",
+      "Evolution: 14% complete\n",
+      "Evolution: 15% complete\n",
+      "Evolution: 16% complete\n",
+      "Evolution: 17% complete\n",
+      "Evolution: 18% complete\n",
+      "Evolution: 19% complete\n",
+      "Evolution: 20% complete\n",
+      "Evolution: 21% complete\n",
+      "Evolution: 22% complete\n",
+      "Evolution: 23% complete\n",
+      "Evolution: 24% complete\n",
+      "Evolution: 25% complete\n",
+      "Evolution: 26% complete\n",
+      "Evolution: 27% complete\n",
+      "Evolution: 28% complete\n",
+      "Evolution: 29% complete\n",
+      "Evolution: 30% complete\n",
+      "Evolution: 31% complete\n",
+      "Evolution: 32% complete\n",
+      "Evolution: 33% complete\n",
+      "Evolution: 34% complete\n",
+      "Evolution: 35% complete\n",
+      "Evolution: 36% complete\n",
+      "Evolution: 37% complete\n",
+      "Evolution: 38% complete\n",
+      "Evolution: 39% complete\n",
+      "Evolution: 40% complete\n",
+      "Evolution: 41% complete\n",
+      "Evolution: 42% complete\n",
+      "Evolution: 43% complete\n",
+      "Evolution: 44% complete\n",
+      "Evolution: 45% complete\n",
+      "Evolution: 46% complete\n",
+      "Evolution: 47% complete\n",
+      "Evolution: 48% complete\n",
+      "Evolution: 49% complete\n",
+      "Evolution: 50% complete\n",
+      "Evolution: 51% complete\n",
+      "Evolution: 52% complete\n",
+      "Evolution: 53% complete\n",
+      "Evolution: 54% complete\n",
+      "Evolution: 55% complete\n",
+      "Evolution: 56% complete\n",
+      "Evolution: 57% complete\n",
+      "Evolution: 58% complete\n",
+      "Evolution: 59% complete\n",
+      "Evolution: 60% complete\n",
+      "Evolution: 61% complete\n",
+      "Evolution: 62% complete\n",
+      "Evolution: 63% complete\n",
+      "Evolution: 64% complete\n",
+      "Evolution: 65% complete\n",
+      "Evolution: 66% complete\n",
+      "Evolution: 67% complete\n",
+      "Evolution: 68% complete\n",
+      "Evolution: 69% complete\n",
+      "Evolution: 70% complete\n",
+      "Evolution: 71% complete\n",
+      "Evolution: 72% complete\n",
+      "Evolution: 73% complete\n",
+      "Evolution: 74% complete\n",
+      "Evolution: 75% complete\n",
+      "Evolution: 76% complete\n",
+      "Evolution: 77% complete\n",
+      "Evolution: 78% complete\n",
+      "Evolution: 79% complete\n",
+      "Evolution: 80% complete\n",
+      "Evolution: 81% complete\n",
+      "Evolution: 82% complete\n",
+      "Evolution: 83% complete\n",
+      "Evolution: 84% complete\n",
+      "Evolution: 85% complete\n",
+      "Evolution: 86% complete\n",
+      "Evolution: 87% complete\n",
+      "Evolution: 88% complete\n",
+      "Evolution: 89% complete\n",
+      "Evolution: 90% complete\n",
+      "Evolution: 91% complete\n",
+      "Evolution: 92% complete\n",
+      "Evolution: 93% complete\n",
+      "Evolution: 94% complete\n",
+      "Evolution: 95% complete\n",
+      "Evolution: 96% complete\n",
+      "Evolution: 97% complete\n",
+      "Evolution: 98% complete\n",
+      "Evolution: 99% complete\n",
+      "Evolution: 99% complete\n",
+      "\n",
+      "\n",
+      "Best:\n",
+      "  Fitness:\t -61876.55987155386\n",
+      "  Phenotype: def fun(price_data):\n",
+      "  import pandas as pd\n",
+      "  import numpy as np\n",
+      "  from fitness.indicators import numba_indicators, signals\n",
+      "  from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals, get_lag\n",
+      "  from numba import njit\n",
+      "  COMMISSION = 0.015\n",
+      "  SLIPPAGE = 0.00005\n",
+      "  AVAILABLE_CAPITAL = 700000\n",
+      "  TRADE_SIZE = 0.5\n",
+      "  MAX_LAG = 99\n",
+      "  buy_idxs, sell_idxs = trading_signals(buy_signal=((price_data['btc_close'][MAX_LAG:] < numba_indicators.moving_average(prices=price_data['btc_close'], window=86)[MAX_LAG:]) & (price_data['btc_close'][MAX_LAG:] > numba_indicators.moving_average(prices=price_data['btc_close'], window=443)[MAX_LAG:])), sell_signal=((numba_indicators.relative_strength_index(prices=price_data['btc_close'], window=37)[MAX_LAG:] > 70) & (price_data['btc_close'][MAX_LAG:] < get_lag(price_data['btc_close'], lag=8)[MAX_LAG:])))\n",
+      "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
+      "    return 999\n",
+      "  buy_idxs = np.array(buy_idxs)\n",
+      "  sell_idxs = np.array(sell_idxs)\n",
+      "  open_prices = price_data['btc_open']\n",
+      "  buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
+      "  sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
+      "  if buy_idxs[0] < sell_idxs[0]:\n",
+      "    buy_arr = get_pnl(sell_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
+      "    buy_pnl = np.sum(buy_arr)\n",
+      "    sell_arr = get_pnl(buy_prices[1:], sell_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
+      "    sell_pnl = np.sum(sell_arr)\n",
+      "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
+      "  else:\n",
+      "    sell_arr = get_pnl(buy_prices, sell_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
+      "    sell_pnl = np.sum(sell_arr)\n",
+      "    buy_arr = get_pnl(sell_prices[1:], buy_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
+      "    buy_pnl = np.sum(buy_arr)\n",
+      "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
+      "  total_pnl = buy_pnl + sell_pnl\n",
+      "  if total_pnl <= 0:\n",
+      "    return 999\n",
+      "  equity_curve_arr = np.cumsum(all_arr)\n",
+      "  drawdowns = get_drawdowns(equity_curve_arr)\n",
+      "  if len(drawdowns[drawdowns!=0]) == 0:\n",
+      "    return 999\n",
+      "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
+      "  fitness = total_pnl / avg_drawdown\n",
+      "  if np.isnan(fitness):\n",
+      "    return 999\n",
+      "  return -fitness\n",
+      "fitness = fun(price_data)\n",
+      "  Genome: [17693, 43138, 91695, 96158, 44998, 14256, 78273, 91695, 75744, 19433, 72035, 19377, 48539, 86877, 95300, 98962, 89388, 19022, 73612, 91588, 44612, 49054, 75369, 14053, 37337, 68284, 87662, 85820, 77239, 33906, 65783, 81062, 39852, 67294, 43026, 38239, 45659, 40218, 57055, 31887, 85135, 18313, 24176, 58150, 64870, 41102, 68606, 42789, 69636, 51663, 71653, 24924, 22614, 99727, 62744, 71545, 39277, 24719, 95816, 76712, 35250, 35900, 46577, 22898, 87250, 71240, 19951, 44118, 23845]\n",
+      "______\n",
+      "\n",
+      "  ave_fitness : \t -869.8050742596812\n",
+      "  ave_genome_length : \t 114.044\n",
+      "  ave_tree_depth : \t 6.0\n",
+      "  ave_tree_nodes : \t 29.954\n",
+      "  ave_used_codons : \t 19.046\n",
+      "  best_fitness : \t -61876.55987155386\n",
+      "  gen : \t 100\n",
+      "  invalids : \t 550\n",
+      "  max_genome_length : \t 212\n",
+      "  max_tree_depth : \t 6\n",
+      "  max_tree_nodes : \t 44\n",
+      "  max_used_codons : \t 27\n",
+      "  min_genome_length : \t 33\n",
+      "  min_tree_depth : \t 6\n",
+      "  min_tree_nodes : \t 16\n",
+      "  min_used_codons : \t 11\n",
+      "  regens : \t 20783\n",
+      "  runtime_error : \t 0\n",
+      "  time_adjust : \t 0\n",
+      "  time_taken : \t 34.13774585723877\n",
+      "  total_inds : \t 50500\n",
+      "  total_time : \t 3579.9335618019104\n",
+      "  unique_inds : \t 49471\n",
+      "  unused_search : \t 2.037623762376242\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python ponyge.py --fitness_function max_fitness_numba_cache --grammar_file btc_experiment.pybnf --population_size 500 --generations 100 --cache --mutate_duplicates --save_all --multicore"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "! python ponyge.py --fitness_function fitness_calc --grammar_file btc_v2024_10_21.pybnf --population_size 10 --generations 1 --cache --mutate_duplicates --multicore --save_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! python ponyge.py --fitness_function max_fitness_numba_cache --grammar_file btc_test.pybnf --population_size 10 --generations 2 --cache --mutate_duplicates --save_all --crossover_probability 0.5 --mutation_probability 0.05 --elite_size 1"
    ]
   },
   {
